<resources>
    <string name="app_name">MayDay_FireBase</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="name">Pseudonym</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login">Login</string>
    <string name="unsafe_chatting">Unsafe Chatting</string>
    <string name="doctor">Doctor</string>
    <string name="status">Status</string>
    <string name="enter_message">Enter Message...</string>
    <string name="display_name">Display Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>
